// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bold component should match the snapshot 1`] = `
<body>
  <div>
    <b
      data-test="DesignSystem-Bold"
    >
      Bold Text
    </b>
  </div>
</body>
`;

exports[`Italics component should match the snapshot 1`] = `
<body>
  <div>
    <i
      data-test="DesignSystem-Italics"
    >
      Italics text
    </i>
  </div>
</body>
`;

exports[`Underline component should match the snapshot 1`] = `
<body>
  <div>
    <u
      data-test="DesignSystem-Underline"
    >
      Underline Text
    </u>
  </div>
</body>
`;
